meon/tests/ui/fail/missing_cap.rs
use meon::define_parser;

define_parser!(Demo {
    sep = b' ', eol = b'\n', tab = b'\t', escape = b'\\';
    inline { fallback => texts; }
});

fn main() {}
